--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,55 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,400&display=swap');
-    </style>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/css/app.css">
-
-</head>
-
-<body>
- 
-    <section class="hero py-16">
-        <div class="container mx-auto flex items-center justify-between">
-            <div class="w-1/2 ">
-                <h6 class="text-lg"><em>Are you hungry?</em></h6>
-                <h1 class="text-6xl font-bold">Don't wait !!</h1>
-                <button class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary">Order Now</button>
-            </div>
-            <div class="w-1/2">
-                <img src="/img/hero-pizza.png" alt="">
-            </div>
+<section class="hero py-16">
+    <div class="container mx-auto flex items-center justify-between">
+        <div class="w-1/2">
+            <h6 class="text-lg"><em>Are you hungry?</em></h6>
+            <h1 class="text-3xl md:text-6xl font-bold">Don't wait !</h1>
+            <button class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary">Order Now</button>
         </div>
-    </section>
-    <section class="menu container mx-auto py-8">
-        <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
+        <div class="w-1/2">
+            <img src="/img/hero-pizza.png" alt="">
+        </div>
+    </div>
+</section>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16">
+
+<section class="menu container mx-auto py-8">
+    <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16">
+        <% pizzas.forEach(function(pizza) { %>
             <div class="w-full md:w-64">
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                <img class="h-40 mb-4 mx-auto" src="/img/<%= pizza.image %>" alt="">
                 <div class="text-center">
-                    <h2 class="mb-4 text-lg">Magirita</h2>
-                    <span class="size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                    <h2 class="mb-4 text-lg">
+                        <%= pizza.name %>
+                    </h2>
+                    <span class="size py-1 px-4 rounded-full uppercase text-xs">
+                        <%= pizza.size %>
+                    </span>
                     <div class="flex items-center justify-around mt-6">
-                        <span class="font-bold text-lg">Rs 250</span>
-                        <button>
+                        <span class="font-bold text-lg">₹<%= pizza.price %></span>
+                        <button data-pizza="<%= JSON.stringify(pizza) %>"
+                            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
                             <span>+</span>
-                        <span class="ml-4">Add</span>
+                            <span class="ml-4">Add</span>
                         </button>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+            <% }) %>
 
-    <script src="/js/app.js"></script>
-</body>
-
-</html>
+    </div>
+</section>
