--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -9,7 +9,11 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet"
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="/css/app.css">
+
 </head>
 
 <body>
@@ -41,7 +45,8 @@
         </div>
     </nav>
     <%- body %>
-        <footer></footer> 
+        <footer></footer>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="/js/app.js"></script>
 </body>
 
